testsuite/tests/rename/should_fail/mc14.stderr

mc14.hs:14:16: error:
    Ambiguous type variable ‘t0’ arising from a use of ‘fmap’
    prevents the constraint ‘(Functor t0)’ from being solved.
    Probable fix: use a type annotation to specify what ‘t0’ should be.
    These potential instances exist:
      instance Functor IO -- Defined in ‘GHC.Base’
      instance Functor Maybe -- Defined in ‘GHC.Base’
      instance Functor ((->) r) -- Defined in ‘GHC.Base’
      ...plus two others
      (use -fprint-potential-instances to see them all)
    In the expression: fmap
    In a stmt of a monad comprehension: then group using f
    In the expression: [() | f <- functions, then group using f]

mc14.hs:14:49: error: Variable not in scope: f :: [a] -> m (t0 a)
